Fixed the problem with displaying the menu on Firefox, the arrow down wrongly displayed and a correction in the embed script of the new archieve view.

--- a/public/dummy.less
+++ b/public/dummy.less
@@ -383,5 +383,7 @@ button.menuitem:hover { background: #33ccaa }
 .menu { z-index: 99999; background: #000; position: fixed; box-shadow: 0 4px 32px 0 rgba(0,0,0,0.5); width: 320px; .clearfix(); }
 .arrow { color:#000; position: fixed; }
 
-.arrow.up { top: -8px; height: 0; width: 0; border-style: solid; border-width: 0 8px 8px 8px; border-color: transparent transparent #000 transparent; }
-.arrow.down { bottom: -8px; height: 0; width: 0; border-style: solid; border-width: 8px 8px 0 8px; border-color: #000 transparent transparent transparent; }
+.arrow.up { height: 0; width: 0; border-style: solid; border-width: 0 8px 8px 8px; border-color: transparent transparent #000 transparent; }
+.arrow.down { height: 0; width: 0; border-style: solid; border-width: 8px 8px 0 8px; border-color: #000 transparent transparent transparent; }
+
+.elSelected { text-shadow : 2px 2px 2px black}
